--- a/p1-5-structure-4.ipynb
+++ b/p1-5-structure-4.ipynb
@@ -47,28 +47,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "3\n",
-      "5\n",
-      "7\n"
-     ]
-    }
-   ],
-   "source": [
-    "primes = [2, 3, 5, 7]\n",
-    "for prime in primes:\n",
-    "    print(prime)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -76,18 +54,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "5\n",
       "1\n",
-      "6\n",
-      "9\n"
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "numbers = [3, 5, 1, 6, 9]\n",
-    "for number in numbers:\n",
-    "    print(number)"
+    "primes = [1, 2, 3, 4, 5]\n",
+    "for prime in primes:\n",
+    "    print(prime)"
    ]
   },
   {
@@ -122,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +109,7 @@
        "[0, 1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,42 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 3, 4, 5, 6, 7, 8, 9]"
+       "range(0, 2)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(range(2, 10)) # 注意 range() 输出是从 start 开始，到 stop-1 结束，也就是说，不包含后一个参数本身"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 3, 4, 5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(2, 10, 1)) # step 的缺省值就是 1，所以这句和上一句完全等价"
+    "range(2)"
    ]
   },
   {
@@ -197,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "[2, 5, 8]"
+       "[4, 5, 6, 7, 8]"
       ]
      },
      "execution_count": 7,
@@ -206,27 +164,7 @@
     }
    ],
    "source": [
-    "list(range(2, 10, 3)) # 这次指定了 3 作为公差"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-3, -1, 1, 3, 5]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(-3, 6, 2))"
+    "list(range(4, 9))"
    ]
   },
   {
@@ -237,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "[-4]"
+       "[4, 5, 6, 7, 8]"
       ]
      },
      "execution_count": 10,
@@ -246,7 +184,47 @@
     }
    ],
    "source": [
-    "list(range(-4, 3, 8))"
+    "list(range(4, 9, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 7]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(1, 10, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-10, -11, -12, -13, -14, -15, -16, -17, -18]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(-10, -19, -1))"
    ]
   },
   {
@@ -258,31 +236,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "b\n",
+      "i\n",
       "a\n",
       "b\n",
-      "r\n",
+      "k\n",
+      " \n",
+      "g\n",
       "a\n",
-      "c\n",
-      "a\n",
-      "d\n",
-      "a\n",
-      "b\n",
-      "r\n",
-      "a\n"
+      "w\n",
+      "r\n"
      ]
     }
    ],
    "source": [
-    "s = 'abracadabra'\n",
-    "for c in s:\n",
-    "    print(c)"
+    "s = \"biabk gawr\"\n",
+    "for n in s:\n",
+    "    print(n)"
    ]
   },
   {
@@ -308,29 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "Loop ends.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "count = 0\n",
     "while count < 5:\n",
-    "    print(count)\n",
-    "    count += 1\n",
+    "        print(count)\n",
+    "        count += 1\n",
     "\n",
-    "print('Loop ends.')"
+    "print(\"Loop ends.\")"
    ]
   },
   {
@@ -347,33 +311,6 @@
    "metadata": {},
    "source": [
     "和 `for` 循环不一样，`while` 的循环条件非常自由，完全由我们的代码来控制，这样的好处是可以处理各种情况的循环，坏处是，有可能玩砸掉。试想上面的循环，如果我们在循环体里没有给 `count` 执行 +1，那么 `count` 的值就永远也不会达到和超过 5，这个循环就会无限进行下去，直到这个页面挂掉。所以在写 `while` 循环时要特别小心的检查，确保循环条件是会终止的，避免出现无限循环的情况。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "8\n",
-      "12\n",
-      "16\n",
-      "20\n",
-      "Loop ends.\n"
-     ]
-    }
-   ],
-   "source": [
-    "i = 4\n",
-    "while i <= 20:\n",
-    "    print(i)\n",
-    "    i +=4\n",
-    "\n",
-    "print('Loop ends.')"
    ]
   },
   {
@@ -396,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -427,14 +364,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 is odd\n"
+      "0 is an even number.\n",
+      "1 is an odd number.\n",
+      "3 is an odd number.\n"
      ]
     }
    ],
@@ -442,13 +381,13 @@
     "from random import randrange\n",
     "\n",
     "while True:\n",
-    "    n = randrange(-2, 5) # randrange 返回一个给定范围的随机整数\n",
+    "    n = randrange(-2, 4)\n",
     "    if n < 0:\n",
     "        break\n",
     "    elif n % 2 == 0:\n",
-    "        print(n, 'is even')\n",
+    "        print(n, \"is an even number.\")\n",
     "    else:\n",
-    "        print(n, 'is odd')"
+    "        print(n, \"is an odd number.\")"
    ]
   },
   {
