--- a/p1-6-structure-5.ipynb
+++ b/p1-6-structure-5.ipynb
@@ -78,28 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter a number:  \n"
+      "Please enter a number: \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not a valid number. Try again...\n"
+      "Not a valid number, please try again!\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter a number:  5\n"
+      "Please enter a number: 5\n"
      ]
     },
     {
@@ -113,12 +113,12 @@
    "source": [
     "while True:\n",
     "    try:\n",
-    "        x = int(input('Please enter a number: '))\n",
+    "        x = int(input(\"Please enter a number:\"))\n",
     "        break\n",
     "    except ValueError:\n",
-    "        print('Not a valid number. Try again...')\n",
+    "        print(\"Not a valid number, please try again!\")\n",
     "\n",
-    "print('Your number is:', x)"
+    "print(\"Your number is:\", x)"
    ]
   },
   {
@@ -132,25 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Handling run-time error: division by zero\n"
+      "Handling runtime error:  division by zero\n"
      ]
     }
    ],
    "source": [
     "def this_fails():\n",
-    "    x = 1/0\n",
-    "\n",
+    "    x = 1 / 0\n",
+    "    \n",
     "try:\n",
     "    this_fails()\n",
     "except ZeroDivisionError as err:\n",
-    "    print('Handling run-time error:', err)"
+    "    print(\"Handling runtime error: \", err)"
    ]
   },
   {
