--- a/p1-4-structure-3.ipynb
+++ b/p1-4-structure-3.ipynb
@@ -76,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79 是奇数\n"
+      "27 is an odd number.\n"
      ]
     }
    ],
@@ -91,31 +91,9 @@
     "from random import randrange\n",
     "n = randrange(1, 100)\n",
     "if n % 2 == 0:\n",
-    "    print(n, '是偶数')\n",
+    "    print(n, \"is an even number.\")\n",
     "else:\n",
-    "    print(n, '是奇数')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-14 是偶数\n"
-     ]
-    }
-   ],
-   "source": [
-    "from random import randrange\n",
-    "o = randrange(-20,3)\n",
-    "if abs(o) % 2 ==0:\n",
-    "    print(o, '是偶数')\n",
-    "else:\n",
-    "    print(o, '是奇数')"
+    "    print(n, \"is an odd number.\")"
    ]
   },
   {
@@ -134,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,42 +132,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "432"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abs(42)"
+    "abs(-432)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.14"
+       "245"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abs(-3.14)"
+    "abs(245)"
    ]
   },
   {
@@ -201,26 +179,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def type_0(x):\n",
     "    if isinstance(x, bool):\n",
-    "        return 'bool'\n",
+    "        return \"bool\"\n",
     "    elif isinstance(x, int):\n",
-    "        return 'int'\n",
+    "        return \"int\"\n",
     "    elif isinstance(x, float):\n",
-    "        return 'float'\n",
+    "        return \"float\"\n",
     "    elif isinstance(x, str):\n",
-    "        return 'str'\n",
+    "        return \"str\"\n",
     "    else:\n",
-    "        return 'Unknown'"
+    "        return \"unvalid data\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -229,18 +207,38 @@
        "'int'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type_0(42)"
+    "type_0(43)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'float'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_0(-325.53)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -249,18 +247,18 @@
        "'str'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type_0('abracadabra')"
+    "type_0(\"ougiXD\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -269,33 +267,33 @@
        "'bool'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type_0(False)"
+    "type_0(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Unknown'"
+       "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type_0([1,2,3])"
+    "isinstance(True, int)"
    ]
   },
   {
@@ -325,27 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bool(42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +332,7 @@
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +343,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(\"0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -374,38 +372,18 @@
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bool(0.0)"
+    "bool(\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bool('')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -414,18 +392,18 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bool('abracadabra')"
+    "bool(\"ngbaohg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -434,18 +412,18 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bool('0')"
+    "bool(16463)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +432,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -474,13 +452,33 @@
        "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bool([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(0.0)"
    ]
   },
   {
@@ -492,24 +490,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5555555555555556\n"
+     ]
+    }
+   ],
    "source": [
     "a = 42\n",
-    "if n != 0:\n",
-    "    a = a / n"
+    "if n!= 0:\n",
+    "    a = a / n\n",
+    "    print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5555555555555556\n"
+     ]
+    }
+   ],
    "source": [
     "a = 42\n",
     "if n:\n",
-    "    a = a / n"
+    "    a = a / n\n",
+    "    print(a)"
    ]
   },
   {
@@ -521,47 +537,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "请输入您的姓名 \n"
+      "Please enter your name: \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "姓名不可为空，请重新输入\n"
+      "Unvalid data! Please try again!\n"
      ]
     }
    ],
    "source": [
-    "s = input('请输入您的姓名')\n",
-    "if s == '':\n",
-    "    print('姓名不可为空，请重新输入')"
+    "s = input(\"Please enter your name:\")\n",
+    "if s == \"\":\n",
+    "    print(\"Unvalid data! Please try again!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "请输入您的姓名 11\n"
+      "Please enter your name: \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unvalid data! Please try again!\n"
      ]
     }
    ],
    "source": [
-    "s = input('请输入您的姓名')\n",
+    "s = input(\"Please enter your name:\")\n",
     "if not s:\n",
-    "    print('姓名不可为空，请重新输入')"
+    "    print(\"Unvalid data! Please try again!\")"
    ]
   },
   {
