--- a/p2-6-string-data.ipynb
+++ b/p2-6-string-data.ipynb
@@ -79,11 +79,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "n = 440312\n",
+    "f = 3.1415926\n",
+    "\n",
+    "s1 = f\"{n}\"\n",
+    "s2 = f\"{f}\""
    ]
   },
   {
@@ -95,29 +99,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "440312"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "int(s1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1415926"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "float(s2)\n",
+    "# int(s2) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "440312.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "float(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(float(f))"
    ]
   },
   {
@@ -131,20 +209,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "int(float(s2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(int(float(s2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "s3 = \"440abc312\"\n",
+    "s4 = \"3.l4l5g26\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '440abc312'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-9f7a71cde897>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: '440abc312'"
+     ]
+    }
+   ],
+   "source": [
+    "float(s3)"
    ]
   },
   {
@@ -163,11 +294,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def is_float(s):\n",
+    "    try:\n",
+    "        float(s)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "    \n",
+    "def is_int(s):\n",
+    "    try:\n",
+    "        int(s)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False\n",
+    "    \n",
+    "def parse_str(s):\n",
+    "    if is_int(s):\n",
+    "        print(f\"您输入的是整数， 其值为{int(s)}。\")\n",
+    "    elif is_float(s):\n",
+    "        print(f\"您输入的是浮点数， 其值为{float(s)}。\")\n",
+    "    else:\n",
+    "        print(f\"输入“{s}”不是数值类型。\")"
    ]
   },
   {
@@ -181,38 +332,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您输入的是整数， 其值为440312。\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "parse_str(s1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您输入的是浮点数， 其值为3.1415926。\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "parse_str(s2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "输入“440abc312”不是数值类型。\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "parse_str(s3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "输入“3.l4l5g26”不是数值类型。\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "parse_str(s4)"
    ]
   },
   {
@@ -233,29 +416,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.07"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from fastnumbers import fast_float\n",
+    "\n",
+    "fast_float(\"56.07\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bad input'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "fast_float(\"bad input\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "fast_float(\"bad input\", default = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fast_float(\"bad input\", 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fast_float(54)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fast_float(\"Ⅴ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fast_float(\"⑦\")"
    ]
   },
   {
@@ -296,11 +594,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-03-05 22:37:22.879976\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from datetime import datetime\n",
+    "t = datetime.now()\n",
+    "print(t)"
    ]
   },
   {
@@ -312,11 +620,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-03-05 22:37:22.879976\n",
+      "2020\n",
+      "3\n",
+      "5\n",
+      "22\n",
+      "37\n",
+      "22\n",
+      "879976\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(t)\n",
+    "print(t.year)\n",
+    "print(t.month)\n",
+    "print(t.day)\n",
+    "print(t.hour)\n",
+    "print(t.minute)\n",
+    "print(t.second)\n",
+    "print(t.microsecond)\n",
+    "print(t.tzinfo)"
    ]
   },
   {
@@ -328,11 +660,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-03-05 22:49:00.863390+08:00\n",
+      "?D1¨²¡À¨º¡Á?¨º¡À??\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t = datetime.now().astimezone()\n",
+    "print(t)\n",
+    "print(t.tzinfo)"
    ]
   },
   {
@@ -351,11 +694,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "年： 2020\n",
+      "月： 03\n",
+      "日： 05\n",
+      "完整日期： 2020-03-05\n",
+      "24小时制日期： 22:49:00\n",
+      "12小时制日期： 10:49:00 PM\n",
+      "日期加时间： 2020-03-05 22:49:00\n",
+      "日期星期加时间： 2020-03-05 Thu 22:49:00\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(\"年：\", t.strftime(\"%Y\"))\n",
+    "print(\"月：\", t.strftime(\"%m\"))\n",
+    "print(\"日：\", t.strftime(\"%d\"))\n",
+    "print(\"完整日期：\", t.strftime(\"%Y-%m-%d\"))\n",
+    "# print(\"压缩版日期：\", t.strftime(\"%Y-%-m-%-d\")) 压缩格式 %-m 和 %-d 不被 Windows 支持，所以这一句在 Windows 环境下会出错\n",
+    "print(\"24小时制日期：\", t.strftime(\"%H:%M:%S\"))\n",
+    "print(\"12小时制日期：\", t.strftime(\"%I:%M:%S %p\"))\n",
+    "print(\"日期加时间：\", t.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
+    "print(\"日期星期加时间：\", t.strftime(\"%Y-%m-%d %a %H:%M:%S\"))"
    ]
   },
   {
@@ -369,11 +735,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020年03月05日 22时49分00秒\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import locale\n",
+    "locale.setlocale(locale.LC_CTYPE, \"chinese\")\n",
+    "print(t.strftime(\"%Y年%m月%d日 %H时%M分%S秒\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(t.strftime(\"%Y-%m-%d %H:%M:%S\"))"
    ]
   },
   {
@@ -399,20 +795,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.datetime'> 2020-02-27 12:09:13\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s1 = \"2020-02-27 Thu 12:09:13\"\n",
+    "t1 = datetime.strptime(s1, \"%Y-%m-%d %a %H:%M:%S\")\n",
+    "print(type(t1), t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.datetime'> 2020-02-27 12:09:13\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import locale\n",
+    "locale.setlocale(locale.LC_CTYPE, \"chinese\")\n",
+    "s2 = \"2020年02月27日 12时9分13秒\"\n",
+    "t2 = datetime.strptime(s2, \"%Y年%m月%d日 %H时%M分%S秒\")\n",
+    "print(type(t2), t2)"
    ]
   },
   {
@@ -435,29 +853,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "t = datetime.now().astimezone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "2020-03-05T23:21:41.127778+08:00\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s = t.isoformat()\n",
+    "print(type(s))\n",
+    "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.datetime'>\n",
+      "2020-03-05 23:21:41.127778+08:00\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s2 = datetime.fromisoformat(s)\n",
+    "print(type(s2))\n",
+    "print(s2)"
    ]
   },
   {
@@ -518,20 +958,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def is_valid_cellphone(s):\n",
+    "    pattern = re.compile(r\"^[1]([3-9])[0-9]{9}$\")\n",
+    "    if pattern.match(s):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
@@ -553,20 +998,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_valid_cellphone(\"13312345678\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_valid_cellphone(\"12458789435\")"
    ]
   },
   {
@@ -619,29 +1086,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "def is_valid_email(s):\n",
+    "    pattern = re.compile(r\"(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)\")\n",
+    "    if pattern.match(s):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_valid_email(\"nel@lee.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "is_valid_email(\"ne l@lee.com\")"
    ]
   },
   {
@@ -653,11 +1147,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter your email address:  neo@lee.com\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your email address is 'neo@lee.com'.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "while True:\n",
+    "    email = input(\"Please enter your email address: \")\n",
+    "    if is_valid_email(email):\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"It's not a valid address, please try again!\")\n",
+    "        \n",
+    "print(f\"Your email address is '{email}'.\")"
    ]
   },
   {
